{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 418,
  "lineage": "7fb3ed5e-6509-6376-f90c-0bf83ebb4314",
  "resources": [
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:security-group/sg-0399da6149b1a3cf2",
            "description": "Enable HTTP/HTTPS access on Port 80/443 via ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0399da6149b1a3cf2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "EFS Access",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "ALB Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019338b727c610528"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Server SG",
            "name_prefix": "",
            "owner_id": "321703364769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "tags_all": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:loadbalancer/app/testLoadBalancer/2e4d5bf6898d39c0",
            "arn_suffix": "app/testLoadBalancer/2e4d5bf6898d39c0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "testLoadBalancer-2072541239.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:loadbalancer/app/testLoadBalancer/2e4d5bf6898d39c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "testLoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-019338b727c610528"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0794f15d7fa62dd49"
              },
              {
                "subnet_id": "subnet-0d70daafb6e304277"
              }
            ],
            "subnets": [
              "subnet-0794f15d7fa62dd49",
              "subnet-0d70daafb6e304277"
            ],
            "vpc_id": "vpc-0d53a555142550f4f",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.elb.aws_security_group.this",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_subnet.public_az2",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:listener/app/testLoadBalancer/2e4d5bf6898d39c0/e84f1a9e92d9580a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:listener/app/testLoadBalancer/2e4d5bf6898d39c0/e84f1a9e92d9580a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:loadbalancer/app/testLoadBalancer/2e4d5bf6898d39c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.this",
            "module.elb.aws_security_group.this",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_subnet.public_az2",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:targetgroup/LBtargetgroup/85d52e302c5a5419",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:listener-rule/app/testLoadBalancer/2e4d5bf6898d39c0/e84f1a9e92d9580a/f642996df26a43da",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:listener-rule/app/testLoadBalancer/2e4d5bf6898d39c0/e84f1a9e92d9580a/f642996df26a43da",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:listener/app/testLoadBalancer/2e4d5bf6898d39c0/e84f1a9e92d9580a",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.this",
            "module.elb.aws_lb_listener.this",
            "module.elb.aws_lb_target_group.this",
            "module.elb.aws_security_group.this",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_subnet.public_az2",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:targetgroup/LBtargetgroup/85d52e302c5a5419",
            "arn_suffix": "targetgroup/LBtargetgroup/85d52e302c5a5419",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:321703364769:targetgroup/LBtargetgroup/85d52e302c5a5419",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "LBtargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:security-group/sg-019338b727c610528",
            "description": "Enable HTTP access on Port 80 for Clients",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019338b727c610528",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Client Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB SG",
            "name_prefix": "",
            "owner_id": "321703364769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB SG"
            },
            "tags_all": {
              "Name": "ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:security-group/sg-0bfe9d72bb8a63dec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfe9d72bb8a63dec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql security group allow traffic from ec2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0399da6149b1a3cf2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SGR-mysql",
            "name_prefix": "",
            "owner_id": "321703364769",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_security_group.this",
            "module.elb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d83ae0821d8f3a27",
            "association_id": "eipassoc-03a97f45228f5fecd",
            "domain": "vpc",
            "id": "eipalloc-0d83ae0821d8f3a27",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0c1244d29fcbcfadd",
            "private_dns": "ip-10-100-10-50.eu-central-1.compute.internal",
            "private_ip": "10.100.10.50",
            "public_dns": "ec2-18-157-252-93.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.252.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-natgw-HeleCloud"
            },
            "tags_all": {
              "Name": "eip-natgw-HeleCloud"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:internet-gateway/igw-0a2a3b94b5d4697e8",
            "id": "igw-0a2a3b94b5d4697e8",
            "owner_id": "321703364769",
            "tags": {
              "Name": "igate-HeleCloud"
            },
            "tags_all": {
              "Name": "igate-HeleCloud"
            },
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d83ae0821d8f3a27",
            "connectivity_type": "public",
            "id": "nat-0fedc5eee24d8ccfd",
            "network_interface_id": "eni-0c1244d29fcbcfadd",
            "private_ip": "10.100.10.50",
            "public_ip": "18.157.252.93",
            "subnet_id": "subnet-0794f15d7fa62dd49",
            "tags": {
              "Name": "natgw-HeleCloud"
            },
            "tags_all": {
              "Name": "natgw-HeleCloud"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:route-table/rtb-0af467ec94aa217f0",
            "id": "rtb-0af467ec94aa217f0",
            "owner_id": "321703364769",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fedc5eee24d8ccfd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:route-table/rtb-0e654c5e73875dffb",
            "id": "rtb-0e654c5e73875dffb",
            "owner_id": "321703364769",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2a3b94b5d4697e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062879c7d095e9dcb",
            "route_table_id": "rtb-0af467ec94aa217f0",
            "subnet_id": "subnet-00058f337c563bb6e"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_az1",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005cb17432298d507",
            "route_table_id": "rtb-0af467ec94aa217f0",
            "subnet_id": "subnet-0427a3a3d0bdec562"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_az2",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0913d531eee92e8d8",
            "route_table_id": "rtb-0af467ec94aa217f0",
            "subnet_id": "subnet-0c6998d448b2260c3"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_data_az1",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e041cf1e5560a2",
            "route_table_id": "rtb-0af467ec94aa217f0",
            "subnet_id": "subnet-05b3e6480b11644ef"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_data_az2",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f49232df2a41a09d",
            "route_table_id": "rtb-0e654c5e73875dffb",
            "subnet_id": "subnet-0794f15d7fa62dd49"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_az1",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eb929c26e27c11d",
            "route_table_id": "rtb-0e654c5e73875dffb",
            "subnet_id": "subnet-0d70daafb6e304277"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_az2",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:subnet/subnet-00058f337c563bb6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00058f337c563bb6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321703364769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_az1-HeleCloud"
            },
            "tags_all": {
              "Name": "private_az1-HeleCloud"
            },
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:subnet/subnet-0427a3a3d0bdec562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0427a3a3d0bdec562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321703364769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_az2-HeleCloud"
            },
            "tags_all": {
              "Name": "private_az2-HeleCloud"
            },
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:subnet/subnet-0c6998d448b2260c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6998d448b2260c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321703364769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_data_az1-HeleCloud"
            },
            "tags_all": {
              "Name": "private_data_az1-HeleCloud"
            },
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:subnet/subnet-05b3e6480b11644ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.100.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b3e6480b11644ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "321703364769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_data_az2-HeleCloud"
            },
            "tags_all": {
              "Name": "private_data_az2-HeleCloud"
            },
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:subnet/subnet-0794f15d7fa62dd49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0794f15d7fa62dd49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321703364769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_az1-HeleCloud"
            },
            "tags_all": {
              "Name": "public_az1-HeleCloud"
            },
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:subnet/subnet-0d70daafb6e304277",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d70daafb6e304277",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321703364769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_az2-HeleCloud"
            },
            "tags_all": {
              "Name": "public_az2-HeleCloud"
            },
            "vpc_id": "vpc-0d53a555142550f4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:321703364769:vpc/vpc-0d53a555142550f4f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-08d3ae592ce497878",
            "default_route_table_id": "rtb-01d26d6fb4ea7f545",
            "default_security_group_id": "sg-0f0e7092d06d09e07",
            "dhcp_options_id": "dopt-04fb76000f58e1e3a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d53a555142550f4f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d26d6fb4ea7f545",
            "owner_id": "321703364769",
            "tags": {
              "key": "Name",
              "propagate_at_launch": "true",
              "value": "HeleCloud"
            },
            "tags_all": {
              "key": "Name",
              "propagate_at_launch": "true",
              "value": "HeleCloud"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}